[package]
name = "tensorflux"
version = "0.4.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface to TensorFlow."
documentation = "https://stainless-steel.github.io/tensorflux"
homepage = "https://github.com/stainless-steel/tensorflux"
repository = "https://github.com/stainless-steel/tensorflux"

[dependencies]
libc = "0.2"
tensorflow-sys = "0.3"
