[package]
name = "tensorflux"
version = "0.8.2"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface to TensorFlow."
documentation = "https://stainless-steel.github.io/tensorflux"
homepage = "https://github.com/stainless-steel/tensorflux"
repository = "https://github.com/stainless-steel/tensorflux"

[features]
complex = ["num-complex"]

[dependencies]
libc = "0.2"
num-complex = { version = "0.1", default-features = false, optional = true }
tensorflux-sys = "0.2"

[dev-dependencies]
random = "0.12"
